# scx-loader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
configs/: org.scx.Loader.conf  org.scx.Loader.policy  org.scx.Loader.xml
crates/scx_loader/: Cargo.toml  configuration.md
crates/scx_loader/src/: config.rs  dbus.rs  lib.rs  main.rs
crates/scxctl/: Cargo.toml  README.md
crates/scxctl/src/: cli.rs  main.rs
services/: scx_loader.service
xtask/: Cargo.toml
